<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Parking area display</string>
    <string name="fresh_to_home" />
    <string name="date">dATe</string>
    <string name="todo">todo</string>
    <string name="Fresh_to_home">Fresh To Home</string>
    <string name="st1">Fresh to Home</string>
    <string name="st2">GO</string>
    <string name="str3">Date</string>
    <string name="st4">Door Open</string>
    <string name="st5">Door close</string>
    <string name="str6">Search address here</string>
    <string name="go">Go</string>
    <string name="next" tools:ignore="DuplicateDefinition">next</string>
    <string name="nex">next..</string>
    <string name="thanks_for_ordering">Thanks for ordering!</string>


</resources>