<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blueimg"
    tools:context=".loadingarea">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="384dp"
        android:layout_height="33dp"
        android:iconifiedByDefault="false"
        android:queryHint="@string/str6"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="254dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="229dp"
        android:layout_height="42dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/st1"
        android:textSize="32sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="145dp"
        tools:layout_editor_absoluteY="186dp" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="70dp"
        android:layout_height="57dp"
        android:minHeight="60dp"
        android:text=""
        tools:ignore="MissingConstraints,UseSwitchCompatOrMaterialXml"
        tools:layout_editor_absoluteX="170dp"
        tools:layout_editor_absoluteY="406dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/st2"
        tools:layout_editor_absoluteX="166dp"
        tools:layout_editor_absoluteY="543dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/date"
        android:layout_width="309dp"
        android:layout_height="31dp"
        android:text="@string/str3"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="36dp"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/st4"
        android:textSize="24sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="419dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/st5"
        android:textSize="24sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="240dp"
        tools:layout_editor_absoluteY="419dp" />


</androidx.constraintlayout.widget.ConstraintLayout>